--- a/story.html
+++ b/story.html
@@ -40,15 +40,15 @@
 
         <div class="story-card">
             <img src="Озера Кыргызстана.webp" alt="Иссык-Куль">
-            <h2>ООзера Кыргызстана</h2>
-            <p>Алексей описывает захватывающее путешествие через песчаные дюны пустыни Гоби.</p>
+            <h2>Озера Кыргызстана</h2>
+            <p>Алексей описывает захватывающее путешествие на Озера Кыргызстана.</p>
             <a href="story3.html" class="btn-secondary">Читать подробнее</a>
         </div>
 
         <div class="story-card">
-            <img src="Туризм в Сафари.webp" alt="История путешествия 4">
-            <h3>Вдохновляющие прогулки по лесам Алтая</h3>
-            <p>Елена делится воспоминаниями о прогулках по густым лесам Алтая.</p>
+            <img src="Джиппинг.webp" alt="Тур 3">
+            <h3>Сафари в Кыргызстане</h3>
+            <p>Елена делится воспоминаниями о поездке по сафари.</p>
             <a href="story4.html" class="btn-secondary">Читать подробнее</a>
         </div>
     </div>
