--- a/story2.html
+++ b/story2.html
@@ -20,10 +20,10 @@
 </header>
 
 <section class="story-detail">
-    <h1>Незабываемое путешествие на озеро Сон-Куль</h1>
-    <img src="Озеро Сон-Куль.webp" alt="Путешествие на Сон-Куль">
+    <img src="Национальный парк Ала-Арча.webp" alt="Ала-Арча">
+    <h2>Национальный парк Ала-Арча</h2>
 
-    <p>Ольга делится впечатлениями о своем путешествии на озеро Сон-Куль. "Это был невероятный опыт! Я никогда не видела такого спокойного и красивого озера в окружении гор. Жизнь в юрте и традиционная кухня — всё было идеально!"</p>
+    <p>Олег делится впечатлениями о своем путешествии в Национальный парк Ала-Арча. "Это был невероятный опыт! Я никогда не видела такого спокойного и красивого озера в окружении гор. Жизнь в юрте и традиционная кухня — всё было идеально!"</p>
 
     <a href="story.html" class="btn-secondary">Вернуться к историям</a>
 </section>
