--- a/story4.html
+++ b/story4.html
@@ -20,11 +20,9 @@
 </header>
 
 <section class="story-detail">
-    <h1>Незабываемое путешествие на озеро Сон-Куль</h1>
-    <img src="Озеро Сон-Куль.webp" alt="Путешествие на Сон-Куль">
-
-    <p>Ольга делится впечатлениями о своем путешествии на озеро Сон-Куль. "Это был невероятный опыт! Я никогда не видела такого спокойного и красивого озера в окружении гор. Жизнь в юрте и традиционная кухня — всё было идеально!"</p>
-
+    <img src="Джиппинг.webp" alt="Тур 3">
+    <h3>Сафари в Кыргызстане</h3>
+    <p>Елена делится воспоминаниями о поездке по сафари."Это был невероятный опыт! Я никогда не видела такого спокойного и красивого озера в окружении гор. Жизнь в юрте и традиционная кухня — всё было идеально!"</p>
     <a href="story.html" class="btn-secondary">Вернуться к историям</a>
 </section>
 
