--- a/story3.html
+++ b/story3.html
@@ -20,10 +20,10 @@
 </header>
 
 <section class="story-detail">
-    <h1>Незабываемое путешествие на озеро Сон-Куль</h1>
-    <img src="Озеро Сон-Куль.webp" alt="Путешествие на Сон-Куль">
+    <img src="Озера Кыргызстана.webp" alt="Иссык-Куль">
+    <h2>Озера Кыргызстана</h2>
 
-    <p>Ольга делится впечатлениями о своем путешествии на озеро Сон-Куль. "Это был невероятный опыт! Я никогда не видела такого спокойного и красивого озера в окружении гор. Жизнь в юрте и традиционная кухня — всё было идеально!"</p>
+    <p>Анна делится впечатлениями о своем путешествии на Озера Кыргызстана. "Это был невероятный опыт! Я никогда не видела такого спокойного и красивого озера в окружении гор. Жизнь в юрте и традиционная кухня — всё было идеально!"</p>
 
     <a href="story.html" class="btn-secondary">Вернуться к историям</a>
 </section>
