--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 </header>
 
 <section class="about">
+    <a href="4,3.html" class="btn" target="_blank">Card</a>
     <h1>О нашей компании</h1>
     <p>Добро пожаловать на наш cайт, специализирующийся на турах в Киргизию!
 
